Updated Publish Nuget

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: publish to nuget
 
 on:
   push:
@@ -7,8 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  publish-nuget:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,4 +26,6 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.2  
       with:   
        PROJECT_FILE_PATH: FondyCoreSDK/FondyCoreSDK.csproj
+       VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
+       TAG_FORMAT: '*'
        NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
