--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,6 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.2  
       with:   
        PROJECT_FILE_PATH: FondyCoreSDK/FondyCoreSDK.csproj
-       VERSION_FILE_PATH: FondyCoreSDK/FondyCoreSDK.nuspec
-       VERSION_REGEX: ^\s*<version>(.*)<\/version>\s*$
+       VERSION_STATIC: 1.0.0
        TAG_FORMAT: '*'
        NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
