--- a/FondyCoreSDK/FondyCoreSDK.csproj
+++ b/FondyCoreSDK/FondyCoreSDK.csproj
@@ -18,7 +18,7 @@
 	  <Compile Remove="Properties\**" />
 	  <EmbeddedResource Remove="Properties\**" />
 	  <None Remove="Properties\**" />
-	  <None Include="..\fondy-logo.svg">
+	  <None Include="..\fondy-logo.png">
 	    <Pack>True</Pack>
 	    <PackagePath></PackagePath>
 	  </None>
